# hermes-harness-plugin

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
src/hermes_harness_plugin/: __init__.py  context.md  context.py  mise.py  plugin.yaml
src/hermes_harness_plugin/skills/mise/: SKILL.md
tests/: test_context_hook.py  test_mise_hook.py
